[2018-06-10 19:29:50 +0200]  Do not show 'strong password' as default (even when password was no..      karasu      {53520274}
[2018-06-10 19:20:30 +0200]  Change switch function in timezone                                         karasu      {48b2d1e9}
[2018-06-10 19:19:08 +0200]  Fix gtkswitch signal                                                       karasu      {fe35dbd5}
[2018-06-10 18:52:01 +0200]  Advanced dialogs bugfixing                                                 karasu      {63515e90}
[2018-06-10 18:42:20 +0200]  Edit partition when double clicking on a partition in partition tre..      karasu      {51b413ee}
[2018-06-10 18:30:32 +0200]  Fix typo                                                                   karasu      {8cb7a9f2}
[2018-06-10 18:27:30 +0200]  Forgot to change this var                                                  karasu      {f856839d}
[2018-06-10 18:25:32 +0200]  Changed OK to APPLY                                                        karasu      {be34b911}
[2018-06-10 18:15:37 +0200]  More dialog fixing. Nearly finished.                                       karasu      {ce952d80}
[2018-06-10 17:49:11 +0200]  Remove ok/apply buttons' modifications                                     karasu      {5d109de6}
[2018-06-10 17:47:34 +0200]  Fix luks_settings password_changed                                         karasu      {dcda0545}
[2018-06-10 17:32:53 +0200]  Add show_all()                                                             karasu      {e254abbb}
[2018-06-10 17:31:21 +0200]  Add show_all                                                               karasu      {0b0c48a4}
[2018-06-09 19:56:14 +0200]  Create table dialog is working. The others need fixing                     karasu      {3d8e27e3}
[2018-06-09 18:39:06 +0200]  Create Table Dialog is not working                                         karasu      {07838784}